Added Gaug.es tracking

--- a/example-walkLED.html
+++ b/example-walkLED.html
@@ -22,4 +22,16 @@ $ &gt; node test.walkLED.js
 <a href="https://github.com/semu/noduino">GitHub</a> for free.  
 </p><p>Icons from <a href="http://glyphicons.com/">Glyphicons Free</a>. Layout based on 
 <a href="http://twitter.github.com/bootstrap/">twitter bootstrap framework</a>. 
-</p></footer></div></body></html>
+</p></footer></div><script type="text/javascript">
+  var _gauges = _gauges || [];
+  (function() {
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
+    t.async = true;
+    t.id    = 'gauges-tracker';
+    t.setAttribute('data-site-id', '4f5681baf5a1f5227e000077');
+    t.src = '//secure.gaug.es/track.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(t, s);
+  })();
+</script></body></html>
