fixed a typo for you :)
examples was spelled wrong: "exmaples"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ $ &gt; npm install
 $ &gt; node app.js
 
 Listening on http://localhost:8080
-</pre></div></div><div class="row"><div class="span3"><p>See the included exmaples on this page or have a look at the example wiring for firing and catching events on your Arduino!</p></div><div class="span9"><pre class="prettyprint linenums">var Noduino = new NoduinoObj({debug: true, host: 'http://localhost:8090'}, Connector);
+</pre></div></div><div class="row"><div class="span3"><p>See the included examples on this page or have a look at the example wiring for firing and catching events on your Arduino!</p></div><div class="span9"><pre class="prettyprint linenums">var Noduino = new NoduinoObj({debug: true, host: 'http://localhost:8090'}, Connector);
 Noduino.connect(function(err, board) {
   if (err) { return console.log(err); }
   
