--- a/getting-started.html
+++ b/getting-started.html
@@ -22,4 +22,8 @@
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(t, s);
   })();
-</script></body></html>
+</script><script
+    id="mtrs"
+    src="https://js.mtrs.io/"
+    data-id="bz7qyuifvu8tfcfjv1epct8cy78det3c1er206pf"></script>
+</body></html>
