--- a/example-walkLED.html
+++ b/example-walkLED.html
@@ -34,4 +34,9 @@ $ &gt; node test.walkLED.js
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(t, s);
   })();
-</script></body></html>
+</script>
+<script
+    id="mtrs"
+    src="https://js.mtrs.io/"
+    data-id="bz7qyuifvu8tfcfjv1epct8cy78det3c1er206pf"></script>
+</body></html>
