--- a/index.html
+++ b/index.html
@@ -72,21 +72,5 @@ Noduino.connect(function(err, board) {
 <a href="https://github.com/sbstjn/noduino">GitHub</a> for free.  
 </p><p>Icons from <a href="http://glyphicons.com/">Glyphicons Free</a>. Layout based on 
 <a href="http://twitter.github.com/bootstrap/">twitter bootstrap framework</a>. 
-</p></footer></div><script type="text/javascript">
-  var _gauges = _gauges || [];
-  (function() {
-    var t   = document.createElement('script');
-    t.type  = 'text/javascript';
-    t.async = true;
-    t.id    = 'gauges-tracker';
-    t.setAttribute('data-site-id', '4f5681baf5a1f5227e000077');
-    t.src = '//secure.gaug.es/track.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(t, s);
-  })();
-</script>
-<script
-    id="mtrs"
-    src="https://js.mtrs.io/"
-    data-id="bz7qyuifvu8tfcfjv1epct8cy78det3c1er206pf"></script>
+</p></footer></div>
 </body></html>
